fixed reveal classes on Contact, added media queries to about me section to stack on smaller screens

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -85,6 +85,15 @@ body {
         margin-left: 15%;
         margin-right: 15%;
     }
+
+    .about-text {
+        text-align: center;
+    }
+
+    #about-me-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
 }
 
 @media screen and (min-width: 600px) and (max-width: 1000px) {
@@ -92,5 +101,14 @@ body {
     .typewriter h1,
     .section-title {
         font-size: 3rem;
+    }
+
+    #about-me-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .about-text {
+        text-align: center;
     }
 }
